--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,9 @@
     </string-array>
 
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="Login_Page_Text">Login Page</string>
+    <string name="Already_Have_an_Account_Text">Already Have an Account</string>
+
 
 </resources>
+
